--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 *.tfstate
 *.tfstate.backup
 .terraform.tfstate.lock.info
+.terraform.lock.hcl
 
 # Module directory
 .terraform/
-
-# Vagrant files
-resources/minion/.vagrant
-resources/minion/hosts
