Fixing customization of opennms.conf - part III

--- a/packer/config/opennms/opennms.conf
+++ b/packer/config/opennms/opennms.conf
@@ -19,14 +19,14 @@ ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -XX:+ResizeTLAB"
 ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -XX:-UseBiasedLocking"
 
 # Configure Remote JMX
-ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.port=18980"
-ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.rmi.port=18980"
-ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.local.only=false"
-ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.ssl=false"
-ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.authenticate=true"
+#ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.port=18980"
+#ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.rmi.port=18980"
+#ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.local.only=false"
+#ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.ssl=false"
+#ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dcom.sun.management.jmxremote.authenticate=true"
 
 # Listen on all interfaces
-ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dopennms.poller.server.serverHost=0.0.0.0"
+#ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Dopennms.poller.server.serverHost=0.0.0.0"
 
 # Accept remote RMI connections on this interface
-ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Djava.rmi.server.hostname=127.0.0.1"
+#ADDITIONAL_MANAGER_OPTIONS="${ADDITIONAL_MANAGER_OPTIONS} -Djava.rmi.server.hostname=127.0.0.1"
