--- a/topology-change/inventory.yaml
+++ b/topology-change/inventory.yaml
@@ -4,7 +4,7 @@ all:
   vars:
     ansible_user: ec2-user
     ansible_port: 22
-    dc: DC1
+    dc: datacenter1 # Please do not change it
   children:
     opennms:
       hosts:
