--- a/topology-change/playbook.yaml
+++ b/topology-change/playbook.yaml
@@ -2,5 +2,6 @@
 ---
 - import_playbook: playbook-reconfigure.yaml
 - import_playbook: playbook-stop.yaml
-- import_playbook: playbook-start.yaml
+- import_playbook: playbook-start-cassandra.yaml
 - import_playbook: playbook-fix-namespaces.yaml
+- import_playbook: playbook-start-opennms.yaml
