--- a/topology-change/playbook-reconfigure.yaml
+++ b/topology-change/playbook-reconfigure.yaml
@@ -1,6 +1,6 @@
 # @author agalue@opennms.com
 ---
-- name: Reconfigure Cassandra
+- name: Enable Network Topology
   hosts: cassandra
   become: true
   order: sorted
@@ -20,24 +20,9 @@
       replace: '\1 GossipingPropertyFileSnitch'
     loop: '{{ instances | dict2items }}'
 
-  - name: Ensure ignore_dc is in place
-    when: dc != "datacenter1"
-    lineinfile:
-      path: '/etc/cassandra/{{ item.key }}/jvm.options'
-      regexp: '^-Dcassandra.ignore_dc='
-      line: '-Dcassandra.ignore_dc=true'
-    loop: '{{ instances | dict2items }}'
-
-  - name: Ensure ignore_rack is in place
-    lineinfile:
-      path: '/etc/cassandra/{{ item.key }}/jvm.options'
-      regexp: '^-Dcassandra.ignore_rack='
-      line: '-Dcassandra.ignore_rack=true'
-    loop: '{{ instances | dict2items }}'
-
-  - name: Generate cassandra-rackdc.properties
+  - name: Force default cassandra-rackdc.properties
     template:
-      src: cassandra-rackdc.j2
+      src: cassandra-rackdc-fixed.j2
       dest: '/etc/cassandra/{{ item.key }}/cassandra-rackdc.properties'
     loop: '{{ instances | dict2items }}'
 
