--- a/topology-change/playbook.yaml
+++ b/topology-change/playbook.yaml
@@ -1,14 +1,20 @@
 # @author agalue@opennms.com
 ---
-# Enable Network Topology
-- import_playbook: playbook-reconfigure.yaml
-# Stop OpenNMS and Cassandra
-- import_playbook: playbook-stop-all.yaml
-# Start Cassandra, one by one
-- import_playbook: playbook-start-cassandra.yaml
-# Fix Namespaces
-- import_playbook: playbook-fix-namespaces.yaml
-# Sart OpenNMS
-- import_playbook: playbook-start-opennms.yaml
-# Decommission, update rack information, boostrap nodes
-- import_playbook: playbook-decommission-bootstrap.yaml
+
+- name: Enable Network Topology
+  import_playbook: playbook-reconfigure.yaml
+
+- name: Stop OpenNMS and Cassandra
+  import_playbook: playbook-stop-all.yaml
+
+- name: Start Cassandra, one by one
+  import_playbook: playbook-start-cassandra.yaml
+
+- name: Fix Namespaces
+  import_playbook: playbook-fix-namespaces.yaml
+
+- name: Sart OpenNMS
+  import_playbook: playbook-start-opennms.yaml
+
+- name: Decommission, update rack information, boostrap nodes
+  import_playbook: playbook-decommission-bootstrap.yaml
